--- a/app/views/courses/_form.html.haml
+++ b/app/views/courses/_form.html.haml
@@ -9,8 +9,8 @@
     = f.rich_text_area :description
     %small= f.error :description, class: 'text-danger'
     = f.input :short_description
-    = f.input :language, collection: %w[English Spanish German]
-    = f.input :level, collection: %w[Beginner Intermediate Advanced]
+    = f.input :language, collection: Course.languages
+    = f.input :level, collection: Course.levels
     = f.input :price
 
   .form-actions
