--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -21,13 +21,12 @@
           = link_to users_path, class: 'nav-link' do
             .fa.fa-users
             Users
-      .form-inline.my-2.my-lg-0
-        = form_tag(courses_path, method: :get) do
-          .input-group
-            = text_field_tag :title, params[:title], autocomplete: 'off', placeholder: "Search", class: 'form-control-sm'
-            %span.input-group-append
-              %button.btn.btn-primary.btn-sm{type: "submit"}
-                %span.fa.fa-search{"aria-hidden" => "true"}
+      = search_form_for @ransack_courses, as: :courses_search, url: courses_path do |f|
+        .input-group
+          =f.search_field :title_or_short_description_cont, class: 'form-control-sm', style: 'float: left; width: 150px; ', placeholder: 'Find a course', autocomplete: :off
+          %span.input-group-append
+            %button.btn.btn-primary.btn-sm{type: "submit"}
+              %span.fa.fa-search{"aria-hidden" => "true"}
       %ul.navbar-nav.mr-right
         %li.nav-item{class: "#{'active font-weight-bold' if current_page?(root_path)}"}
           = link_to root_path, class: 'nav-link' do
@@ -44,6 +43,9 @@
               .fa.fa-sign-out-alt
               %b Sign out
     - else
-      %ul.navbar.nav
-        %li.nav-item= link_to 'Sign Up', new_user_registration_path, class: 'nav-link'
-        %li.nav-item= link_to 'Log In', new_user_session_path, class: 'nav-link'
+      %ul.navbar-nav.mr-auto
+      %ul.navbar-nav.mr-right
+        %li.nav-item{class: "#{'active front-weight-bold' if current_page?(new_user_registration_path)}"}
+          = link_to 'Sign Up', new_user_registration_path, class: 'nav-link'
+        %li.nav-item{class: "#{'active front-weight-bold' if current_page?(new_user_session_path)}"}
+          = link_to 'Log In', new_user_session_path, class: 'nav-link'
