--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -21,6 +21,11 @@
           = link_to users_path, class: 'nav-link' do
             .fa.fa-users
             Users
+        %li.nav-item{class: "#{'active font-weight-bold' if current_page?(home_activity_path)}"}
+          = link_to home_activity_path, class: 'nav-link' do
+            .fa.fa-bell
+            Activity
+
       = search_form_for @ransack_courses, as: :courses_search, url: courses_path do |f|
         .input-group
           =f.search_field :title_or_short_description_cont, class: 'form-control-sm', style: 'float: left; width: 150px; ', placeholder: 'Find a course', autocomplete: :off
